--- a/SubTaskA.ipynb
+++ b/SubTaskA.ipynb
@@ -594,7 +594,7 @@
     "    return accuracy\n",
     "\n",
     "accuracy = calculate_ranking_accuracy(true_test_rankings,final_predicted_rankings)\n",
-    "print(f\"Ranking Accuracy: {accuracy:.2f}%\")\n"
+    "print(f\"Ranking Accuracy: {accuracy:}"
    ]
   }
  ],
